--- a/main.html
+++ b/main.html
@@ -4,83 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
- 
-      <!-- Your code here -->
-	      <table border="1" cellspacing="0" cellpadding="10" width="100%">
-        <!-- First Row -->
-        <tr>
-            <!-- Nested Table 2 -->
-            <td>
-                <table border="1" cellspacing="0" cellpadding="5" width="100%">
-                    <tr>
-                        <td colspan="2" align="center"><b>Nested Table 2</b></td>
-                    </tr>
-                    <tr>
-                        <td align="center"><b>Column 1</b></td>
-                        <td align="center"><b>Column 2</b></td>
-                    </tr>
-                    <tr>
-                        <td align="center">abc</td>
-                        <td align="center">def</td>
-                    </tr>
-                </table>
-            </td>
-            <!-- Nested Table 1 -->
-            <td>
-                <table border="1" cellspacing="0" cellpadding="5" width="100%">
-                    <tr>
-                        <td align="center"><b>Nested Table 1</b></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <ul>
-                                <li>List item 1</li>
-                                <li>List item 2</li>
-                                <li>List item 3</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-        <!-- Second Row -->
-        <tr>
-            <!-- Nested Table 3 -->
-            <td>
-                <table border="1" cellspacing="0" cellpadding="5" width="100%">
-                    <tr>
-                        <td align="center"><b>Nested Table 3</b></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <table border="0" cellspacing="0" cellpadding="5" width="100%">
-                                <tr>
-                                    <td><a href="#">Nested Table</a></td>
-                                    <td align="right">Demo Continued</td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-            <!-- Nested Table 4 -->
-            <td>
-                <table border="1" cellspacing="0" cellpadding="5" width="100%">
-                    <tr>
-                        <td align="center"><b>Nested Table 4</b></td>
-                    </tr>
-                    <tr>
-                        <td align="center" style="background-color: black; color: white;">
-                            <b>HTML</b>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
+    <table border="1px" style="width: 100%; text-align: center;">
+      <tr>
+        <!-- Nested Table 2 -->
+        <td>
+          <table border="1px" style="width: 100%;">
+            <tr>
+              <th colspan="2">Nested Table 2</th>
+            </tr>
+            <tr>
+              <th>Column 1</th>
+              <th>Column 2</th>
+            </tr>
+            <tr>
+              <td>abc</td>
+              <td>def</td>
+            </tr>
+          </table>
+        </td>
+        <!-- Nested Table 1 -->
+        <td>
+          <table border="1px" style="width: 100%;">
+            <tr>
+              <th>Nested Table 1</th>
+            </tr>
+            <tr>
+              <td>
+                <ul>
+                  <li>List item 1</li>
+                  <li>List item 2</li>
+                  <li>List item 3</li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <tr>
+        <!-- Nested Table 3 -->
+        <td>
+          <table border="1px" style="width: 100%;">
+            <tr>
+              <th colspan="2">Nested Table 3</th>
+            </tr>
+            <tr>
+              <td><a href="#table">Nested Table</a></td>
+              <td>Demo Continued</td>
+            </tr>
+          </table>
+        </td>
+        <!-- Nested Table 4 -->
+        <td>
+          <table border="1px" style="width: 100%;">
+            <tr>
+              <th>Nested Table 4</th>
+            </tr>
+            <tr>
+              <td style="background-color: black; color: white; text-align: center;">HTML</td>
+            </tr>
+          </table>
+        </td>
+      </tr>
     </table>
-
   </body>
 </html>
